--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,14 @@ pdf2image
 numpy
 opencv-python-headless
 unstructured_inference
+faiss-cpu
+groq
+langchain-groq
+PyPDF2
+langchain_google_genai
+langchain
+streamlit
+langchain_community
+pypdf
+streamlit_mic_recorder
+google-cloud-aiplatform>=1.38
